refactor : Stream으로 표현 가능한 for문 변경 (#54)